tests/agl/rejections/parse/pat_positional_after_named.agl
enum R
  | Some(value: int, tag: text)
let r: R = Some(value = 3, tag = "x")
case r of
  | Some(tag = t, x) => print t
  | _ => ()
